# bbob-jax

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: build_docs.yml  pull_request.yml  release.yaml  release.yml
docs/: .citation.md  api.md  index.md  installation.md  usage.ipynb  usage.md
docs/source/: api.rst  conf.py  index.rst  readme.rst
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
scripts/: update_plots.py
src/bbob_jax/: __init__.py  plotting.py
src/bbob_jax/_src/: bbob.py  plotting.py  registry.py  tags.py  utils.py
tests/: test_example.py  verify_global_minima.py  verify_minima.py
