[project]
name = "bbob-jax"
version = "0.4.0"
description = "BBOB Benchmark function implemented in JAX"
readme = "README.md"
authors = [
    {name = "M.P. van der Schelling", email = "m.p.vanderschelling@tudelft.nl"}
]
urls = {repository = "https://github.com/bessagroup/bbob-jax"}
keywords = ["jax", "bbob", "benchmarking", "black-box", "optimization"]

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics"
]

license = {text = "BSD-3-Clause"}

dependencies = [
    "jax",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.7",
]

requires-python = ">=3.10"


[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E226",
    "E3",
    "E731",
    "C901",
    "UP045",
    "B027",
    "B012",
]

exclude = [
    "__pycache__",
    "dist",
	"*.egg",
	"tests",
	".git",
	"notebooks",
	"tests/*",
    "docs/*",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "coco-experiment>=2.8.1",
]

[project.optional-dependencies]
tests = [
  "pytest"
]

docs = [
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-include-exclude-files>=0.1.0",
    "mkdocs-ipynb>=0.1.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "pymdown-extensions>=10.16.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
